# CppConNotes

./: .gitignore  A Tour of C++.MD  CMakeLists.txt  README.md
Back to Basics/: CMakeLists.txt  Object-Oriented Programming.MD  RAII and The Rule of Zero.MD  Smart Pointers.MD
Back to Basics/Concurrency/: CMakeLists.txt  block.cpp  compile_commands.json  mutex.cpp  thread.cpp
Back to Basics/Concurrency/src/: join.cpp
Leveraging Modern C++ in Quantitative Finance/: CMakeLists.txt  LICENSE.txt  README.MD
Leveraging Modern C++ in Quantitative Finance/demo/: CMakeLists.txt  circularBuffer.cpp  diffAndInte.cpp  latticeMethod.cpp  optionDelta.cpp  optionPricer.cpp  rootFinder.cpp  statAccumulator.cpp
Leveraging Modern C++ in Quantitative Finance/qf/: BSMOptPricer.cpp  BSMOptPricer.hpp  Bisection.hpp  CMakeLists.txt  EquityPriceGenerator.cpp  EquityPriceGenerator.hpp  EuroNode.hpp  EuroTree.cpp  EuroTree.hpp  Examples.hpp  MCEuroOptPricer.cpp  MCEuroOptPricer.hpp  OptionType.hpp  Steffenson.hpp  TimeSeries.cpp  TimeSeries.hpp
Misc/: Free Store vs Heap.MD  On std__async.MD  Static and Shared Libraries.MD
